[package]
name = "geopext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geopext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.0"
numpy = "0.21.0"
geop = { path = "/home/luisfpereira/Repos/github/geop", version = "0.1.0" }

[toolchain]
channel = "nightly"
