[package]
name = "geopext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geopext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.0"
numpy = "0.21.0"
geop = { git = "https://github.com/luisfpereira/geop", rev = "75bc30f778476307ebbd2bdfa875635e9f09b9dd" }

[toolchain]
channel = "nightly"
