[package]
name = "geopext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geopext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.0"
numpy = "0.21.0"
geop = { git = "https://github.com/luisfpereira/geop", rev = "07c3334fb3b2c06cd7fcbca09b1927cfcc26fa60" }
baby_shark = { git = "https://github.com/dima634/baby_shark.git" }

[toolchain]
channel = "nightly"
